<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/activity_main_filter"
        android:checkableBehavior="single">
        <item
            android:id="@id/navigation_overview"
            android:icon="@drawable/overview"
            android:title="@string/overview" />
        <item
            android:id="@id/navigation_active"
            android:icon="@drawable/active"
            android:title="@string/active" />

        <item
            android:id="@id/navigation_waiting"
            android:icon="@drawable/waiting"
            android:title="@string/waiting" />

        <item
            android:id="@id/navigation_paused"
            android:icon="@drawable/paused"
            android:title="@string/paused" />

        <item
            android:id="@id/navigation_completed"
            android:icon="@drawable/completed"
            android:title="@string/completed" />

        <item
            android:id="@id/navigation_error"
            android:icon="@drawable/error"
            android:title="@string/error" />
    </group>

    <group>
        <item
            android:id="@id/navigation_plugin"
            android:icon="@drawable/plugin"
            android:title="@string/plugin" />

        <item
            android:id="@id/navigation_setting"
            android:icon="@drawable/setting"
            android:title="@string/setting" />

        <item
            android:id="@id/navigation_about"
            android:icon="@drawable/about"
            android:title="@string/about" />
    </group>
</menu>
