<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="task"
            type="com.owl.wings.TaskListViewModel.TaskData" />

    </data>

    <androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/small_margin"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        app:cardCornerRadius="@dimen/small_margin"
        app:cardElevation="@dimen/small_margin">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/medium_margin">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:singleLine="true"
                android:text="@{task.content}"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                app:layout_constraintBottom_toTopOf="@id/task_item_guideline_horizontal"
                app:layout_constraintEnd_toStartOf="@id/task_item_guideline_vertical"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{com.owl.wings.Util.convertStatus(task.status)??com.owl.wings.R.string.waiting}"
                app:layout_constraintBottom_toTopOf="@id/task_item_guideline_horizontal"
                app:layout_constraintEnd_toStartOf="@id/task_item_action_group"
                app:layout_constraintStart_toEndOf="@id/task_item_guideline_vertical"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/task_item_action_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@id/task_item_guideline_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/start"
                    android:focusable="true"
                    android:onClick="@{()->com.owl.wings.Util.notRunning(task.status)?task.task.start():void}"
                    android:src="@drawable/start"
                    android:visibility="@{com.owl.wings.Util.notRunning(task.status)?android.view.View.VISIBLE:android.view.View.GONE}" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:contentDescription="@string/pause"
                    android:focusable="true"
                    android:onClick="@{()->com.owl.wings.Util.isRunning(task.status)?task.task.pause():void}"
                    android:src="@drawable/pause"
                    android:visibility="@{com.owl.wings.Util.isRunning(task.status)?android.view.View.VISIBLE:android.view.View.GONE}" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/task_item_guideline_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.7" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/task_item_guideline_vertical"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.45" />

            <ProgressBar
                android:id="@+id/task_item_progress"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/small_margin"
                android:max="100"
                android:progress="@{task.progress.intValue()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/task_item_progress_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/task_item_guideline_horizontal" />

            <TextView
                android:id="@+id/task_item_progress_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tiny_margin"
                android:layout_marginEnd="@dimen/tiny_margin"
                android:singleLine="true"
                android:text="@{String.format(java.util.Locale.getDefault(), `%.2f%%`, task.progress)}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/task_item_guideline_vertical"
                app:layout_constraintStart_toEndOf="@id/task_item_progress"
                app:layout_constraintTop_toBottomOf="@id/task_item_guideline_horizontal" />

            <ImageView
                android:id="@+id/task_item_download_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/tiny_margin"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/download_speed"
                android:src="@drawable/download"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/task_item_download"
                app:layout_constraintStart_toEndOf="@id/task_item_guideline_vertical"
                app:layout_constraintTop_toBottomOf="@id/task_item_guideline_horizontal" />

            <TextView
                android:id="@+id/task_item_download"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/tiny_margin"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@{task.download}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/task_item_upload_icon"
                app:layout_constraintStart_toEndOf="@id/task_item_download_icon"
                app:layout_constraintTop_toBottomOf="@id/task_item_guideline_horizontal" />

            <ImageView
                android:id="@+id/task_item_upload_icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:contentDescription="@string/upload_speed"
                android:src="@drawable/upload"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/task_item_upload"
                app:layout_constraintStart_toEndOf="@id/task_item_download"
                app:layout_constraintTop_toBottomOf="@id/task_item_guideline_horizontal" />

            <TextView
                android:id="@+id/task_item_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:singleLine="true"
                android:text="@{task.upload}"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/task_item_upload_icon"
                app:layout_constraintTop_toBottomOf="@id/task_item_guideline_horizontal" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>